--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "pspepp3r/prophetic",
-    "description": "A framework for starting up projects",
+    "name": "pspepp3r/blogginit",
+    "description": "A simple blogging site",
     "type": "project",
-    "keywords": ["prophetic", "framework"],
+    "keywords": ["blogginit", "blogger", "vlog", "blog"],
     "license": "MIT",
     "authors": [
         {
@@ -40,12 +40,5 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    }
 }
