--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "league/mime-type-detection": "^1.16",
         "twig/intl-extra": "^3.20",
         "slim/csrf": "^1.5",
-        "symfony/mailtrap-mailer": "^7.2"
+        "symfony/mailtrap-mailer": "^7.2",
+        "ipinfo/ipinfo": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
