- Updated .env.example - Little tweak in landing page - Started RateLimitMiddleware for Redis caching

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ APP_DEBUG=
 APP_KEY=
 APP_NAME=
 APP_VERSION=
+APP_BASE_URL=
 
 # Session configurations
 SESSION_SECURE=
@@ -19,5 +20,9 @@ SESSION_HTTP_ONLY=
 SESSION_SAME_SITE=
 
 # Mailer configurations
+MAILER_LOCAL_DSN=
 MAILER_DSN=
 MAILER_FROM=
+
+# IPInfo Configuration
+IPINFO_TOKEN=
