--- a/docker/apache/httpd.conf
+++ b/docker/apache/httpd.conf
@@ -4,7 +4,7 @@ Listen 80
 
 <VirtualHost *:80>
     ServerName localhost
-    DocumentRoot /var/www/html/public
+    DocumentRoot /var/www/public
 
     <Directory /var/www/html/public>
         Options Indexes FollowSymLinks
